# libhum

./: CITATION.cff  README.md  main.py  pyproject.toml  requirements.txt
libhum/: analysis.py  io.py  match.kernel  match.py  merge.py  signal.py  types.py
libhum/opencl/: match.cl
samples/: reference.enf  target.enf
src/libhum/: analysis.py  io.py  match.py  match_score_regressor.pickle  match_score_regressor_variants.pickle  types.py
