[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libhum"
dynamic = ["version"]
authors = [
    {name="Raphael Javaux", email="raphael@noisycamp.com"},
]
description = "Libhum is a Python GPU-accelerated library to extract and compare Electricity Frequency Signals (ENF)"
readme = "README.md"
license = {file= "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Environment :: GPU",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "attrs>=23.1.0",
    "audiofile>=1.2.1",
    "lz4>=4.3.2",
    "matplotlib>=3.7.1",
    "numpy>=1.24.3",
    "requests>=2.28.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "sortedcontainers>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "libhum.__version__"}

[project.optional-dependencies]
opencl = ["pyopencl>=2022.3.1"]
cuda = ["pycuda>=2022.2.2"]

[project.scripts]
libhum = "libhum.main:main"

[project.urls]
Homepage = "https://github.com/RaphaelJ/libhum/"
Issues = "https://github.com/RaphaelJ/libhum/issues"